Refactor CORS Refactor Logic and Business
