# entity/categorias.go
@@ -1,13 +1,12 @@
 package entity
 
 // Categorias es una estructura que representa a la colección de categorías en Firestore
-// @title Categorias
-// @description Estructura de datos para las categorías de productos
+// @summary Estructura de datos para las categorías de productos
 // @type Categorias
 // @prop nombre - Nombre de la categoría
 // @prop desc - Descripción de la categoría
 // @prop url - URL de la imagen de la categoría
-// @prop tipos - Tipos de productos que pertenecen a la categoría
+// @prop tipos - Tipos de productos que pertenecen a la categoría (nombre) y su ID
 type Categorias struct {
 	Nombre string   `firestore:"nombre"`
 	Desc   string   `firestore:"desc"`
@@ -15,21 +14,28 @@ type Categorias struct {
 	Tipos  []string `firestore:"tipos"`
 }
 
-// CategoriasResponse es una estructura que representa a la colección de categorías en Firestore
-// @title CategoriasResponse
-// @description Estructura de datos para las categorías de productos
+// CategoriasResponse es una estructura que representa la respuesta de la API para las categorías de productos
+// @summary Estructura de datos para las categorías de productos
 // @type CategoriasResponse
 // @prop id - ID de la categoría
 // @prop nombre - Nombre de la categoría
 // @prop desc - Descripción de la categoría
 // @prop url - URL de la imagen de la categoría
-// @prop tipos - Tipos de productos que pertenecen a la categoría
+// @prop tipos - Tipos de productos que pertenecen a la categoría (nombre) y su ID
 type CategoriasResponse struct {
-	ID     string   `json:"id"`
-	Nombre string   `json:"nombre"`
-	Desc   string   `json:"desc"`
-	URL    string   `json:"url"`
-	Tipos  []string `json:"tipos"`
+	ID     string         `json:"id"`
+	Nombre string         `json:"nombre"`
+	Desc   string         `json:"desc"`
+	URL    string         `json:"url"`
+	Tipos  []TipoProducto `json:"tipos"`
+}
+
+type TipoProducto struct {
+	ID           string   `json:"id"`
+	Nombre       string   `json:"nombre"`
+	Precio       string   `json:"precio"`
+	Stock        string   `json:"stock,omitempty"`
+	Ingredientes []string `json:"ingredientes"`
 }
 
 // Path: entity/categorias.go
